// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iTNNFd"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 2`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 1
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 2
        </h6>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Item 3
        </h6>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 3`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (standard)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcydZj"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (selected)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={true}
    href={null}
    id={null}
    onClick={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (disabled)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 4`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 cQcOMM"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item (interaction disabled)
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 5`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            AB
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            CD
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            EF
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 dqLiae"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            GH
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 6`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 1"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jaFgBa"
            fontSize="0.82em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 2"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jaFgBa"
            fontSize="0.82em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
          disabled={false}
          id={null}
          label={null}
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 4"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jaFgBa"
            fontSize="0.82em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 7`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 bdHaNe"
          id={null}
          label="Label"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Label
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 bdHaNe"
          id={null}
          label="6"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            6
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 bdHaNe"
          id={null}
          label="NEW!"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            NEW!
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 bdHaNe"
          id={null}
          label="9"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 8`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 1"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor="Box 1"
            letterSpacing="0px"
          >
            Box 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 2"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor="Box 2"
            letterSpacing="0px"
          >
            Box 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 3"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor="Box 3"
            letterSpacing="0px"
          >
            Box 3
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 exoZGd"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          List Item
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 4"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor="Box 4"
            letterSpacing="0px"
          >
            Box 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 9`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 iOWfKZ"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 lcmyqH"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 bRGQtj"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            List Item
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
</ul>
`;
